environments/docker-desktop/kubernetes/tekton-pipelines/docker-registry/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: tekton-pipelines
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
      - name: certs-vol
        secret:
          secretName: certs-secret
      - name: htpasswd
        configMap: 
          name: docker-registry
      - name: registry-vol
        persistentVolumeClaim:
          claimName: docker-images-pvc
      containers:
        - image: registry:2
          name: docker-registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: certs-vol
            mountPath: /certs
          - name: registry-vol
            mountPath: /var/lib/registry
          - name: htpasswd
            mountPath: /auth
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: tekton-pipelines
spec:
  selector:
    app: docker-registry
  ports:
  - port: 5000
    targetPort: 5000
